# vestig

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_SIMPLE.md  Bi-Temporal-Implementation_Plan.md  CLAUDE_COMMANDS.md  COMMANDS.txt  EMBEDDING_COMPARISON_FINAL.md  EPHEMERAL-TEMPORAL-STABILITY-PLAN.md  FALKORDB_MIGRATION_PLAN.md  FULL_TEST_SUITE_README.md  GLOSSARY.md  GRAPH_PROVENANCE_FIX.md  GUIDING_PRINCIPLES.md  HYBRID_RETRIEVAL_PROPOSAL.md  HYBRID_RETRIEVAL_TEST_PLAN.md  INGESTION_EXPLAINER.md  M3-supplemental.md  M3_Sprint_Plan.md  M4-SUMMARY-NODES.md  M4-SUMMARY_NODES_PLAN.md  M4_Completion_Report.md  M5_IMPLEMENTATION_PLAN.md  M5_PLAN.md  MENTOR_UPDATE_ENTITY_RETRIEVAL.md  PERFORMANCE_ANALYSIS.md  PHASE2_COMPLETE.md  PLAN.md  PLAN_M3.md  PYTHON_CONSTRAINTS.md  QUICKSTART_INGESTION.md  README.md  RECALL_EXPLAINER.md  ROADMAP.md  Rapid_Python_Style_Guide_Ruff.md  SPEC.md  TESTING_STRATEGY.md  TRACERANK_ANALYSIS.md  TRACERANK_COMPARISON.md  TRACERANK_TEST_RCA.md  TRACERANK_TUNING_TEST.md  (+32 more)
_research_do_not_use/: ANALYSIS_NOISE_VS_SIGNAL.md  LESSONS_LEARNED.md  README.md  design_learnings_mnemosyne.md  embedding_model_decision.md  mnemosyne_summary.md  zep_summary.md
benchmarks/: benchmark_performance.py
configs/: README.md
demos/: demo_commit_outcome.py  demo_m1.sh  demo_m3_events.py
scripts/: deadcode
test/: GRAPH_EDGE_PROPOSAL.md  config-ada-002-full.yaml  config-ada-002-no-graph.yaml  config-ada-002.yaml  config-all-minilm-full.yaml  config-all-minilm-no-graph.yaml  config-all-minilm.yaml  config-bge-m3-full.yaml  config-bge-m3-no-graph.yaml  config-matt.yaml  (+92 more)
(+148 files in other folders)
